--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^5.0.0",
     "cordova-admob-sdk": "^0.24.1",
     "cordova-android": "8.1.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-admob-free": "0.27.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-inappbrowser": "^3.2.0",
@@ -92,7 +93,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
